# kpeople

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5PeopleConfig.cmake.in  KF6PeopleConfig.cmake.in  Mainpage.dox  README.md  metainfo.yaml
autotests/: CMakeLists.txt  fakecontactsource.cpp  fakecontactsource.h  persondatatests.cpp  persondatatests.h  personsmodeltest.cpp  personsmodeltest.h  personsproxymodeltest.cpp  personsproxymodeltest.h  servicetest.cpp  servicetest.h
examples/: CMakeLists.txt  contactlistqml.cpp  contactlistwidgets.cpp  duplicates.cpp  duplicatesdialog.cpp  mergededicateddialog.cpp  personwidget.cpp
examples/qml/: Main.qml
src/: CMakeLists.txt  KF5People-android-dependencies.xml  Messages.sh  abstract-person-plugin.cpp  abstract-person-plugin.h  abstract-persons-manager.cpp  abstract-persons-manager.h  abstract-persons-manager_p.h  abstractpersonaction.cpp  abstractpersonaction.h  abstractpersonplugin.cpp  abstractpersonplugin.h  actions.cpp  actions.h  allcontactsmonitor.cpp  allcontactsmonitor.h  base-persons-data-source.cpp  base-persons-data-source.h  basepersonsdatasource.cpp  basepersonsdatasource.h  basic-person-cache-item-facet.cpp  basic-person-cache-item-facet.h  contact-item.cpp  contact-item.h  contact.cpp  contact.h  contactitem.cpp  contactitem.h  contactitem_p.h  contactmonitor.cpp  contactmonitor.h  datasourcewatcher.cpp  datasourcewatcher.h  defaultcontactmonitor.cpp  defaultcontactmonitor_p.h  digikam-person-cache-item-facet.cpp  digikam-person-cache-item-facet.h  digikam-persons-manager.cpp  digikam-persons-manager.h  digikam-persons-model.cpp  (+96 more)
src/KPeople/: AbstractPersonAction  AbstractPersonPlugin  AllContactsMonitor  BasePersonsDataSource  ContactMonitor  PersonData  PersonsModel  PersonsModelFeature
src/autotests/: CMakeLists.txt  fakecontactsource.cpp  fakecontactsource.h  mergetests.cpp  mergetests.h  persondatatests.cpp  persondatatests.h  personmanagertests.cpp  personmanagertests.h
src/autotests/lib/: CMakeLists.txt  NepomukTestLibMacros.cmake.in  datagenerator.cpp  datagenerator.h  nepomukserverrc.in  nepomuktest_export.h  testbase.cpp  testbase.h
src/autotests/lib/tools/: CMakeLists.txt  dbus-session-begin.sh  dbus-session-end.sh  nepomuk-sandbox-begin.sh.in  runNepomukTest.sh.in  (+1 more)
src/autotests/tests/: CMakeLists.txt  duplicatestests.cpp  duplicatestests.h  modeltests.cpp  modeltests.h  persondatatests.cpp  persondatatests.h
src/backends/: CMakeLists.txt  abstractcontact.cpp  abstractcontact.h  abstracteditablecontact.cpp  abstracteditablecontact.h  abstractpersonaction.cpp  abstractpersonaction.h  allcontactsmonitor.cpp  allcontactsmonitor.h  basepersonsdatasource.cpp  basepersonsdatasource.h  contactmonitor.cpp  contactmonitor.h  defaultcontactmonitor.cpp  defaultcontactmonitor_p.h  kpeoplebackend.qdoc  kpeoplebackend.qdocconf
src/backends/vcard/: kpeoplevcard.json
src/declarative/: CMakeLists.txt  avatarimageprovider.cpp  avatarimageprovider.h  declarativepersondata.cpp  declarativepersondata.h  declarativepersonsmodel.cpp  declarativepersonsmodel.h  peopleqmlplugin.cpp  peopleqmlplugin.h  personactionsmodel.cpp  personactionsmodel_p.h  qmldir
src/example/: CMakeLists.txt
src/examples/: CMakeLists.txt  contactlistwidgets.cpp  duplicates.cpp  lovelypeople.cpp  mergededicateddialog.cpp  niceperson.cpp  personwidget.cpp  sweetpeople.cpp
src/examples/gitlog/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  logmodel.cpp  logmodel.h
src/examples/qml/: Main.qml
src/plugins/: CMakeLists.txt  email-plugin.cpp  email-plugin.h  im-plugin.cpp  im-plugin.h  im_persons_data_source_plugin.desktop
src/plugins/akonadi/: CMakeLists.txt  akonadi_kpeople_plugin.desktop  akonadidatasource.cpp  akonadidatasource.h
src/plugins/core/: CMakeLists.txt  email-plugin.cpp  email-plugin.h  email_kpeople_plugin.desktop  emailplugin.cpp  emailplugin.h
src/plugins/ktp-plugin/: CMakeLists.txt  im-persons-data-source-plugin.cpp  im-persons-data-source.cpp  im-persons-data-source.h  im-plugin.cpp  im-plugin.h  im_persons_data_source_plugin.desktop  impersonsdatasource.cpp  impersonsdatasource.h  impersonsdatasourceplugin.cpp  implugin.cpp  implugin.h  ktp_kpeople_plugin.desktop
src/plugins/presence_plugin/: CMakeLists.txt  im-persons-data-source.cpp  im-persons-data-source.h  im_persons_data_source_plugin.desktop
src/service/: CMakeLists.txt  main.cpp  service.cpp  service.h
src/tests/: CMakeLists.txt  duplicatestest.cpp  duplicatestest.h  persondatatest.cpp  persondatatest.h  personsmodeltest.cpp  personsmodeltest.h
src/widgets/: CMakeLists.txt  abstractfieldwidgetfactory.cpp  abstractfieldwidgetfactory.h  abstractpersondetailswidget.cpp  abstractpersondetailswidget.h  actions.cpp  actions.h  kpeoplewidgets.qdoc  kpeoplewidgets.qdocconf  mergedelegate.cpp  mergedelegate.h  mergedialog.cpp  mergedialog.h  person-details-presentation.ui  personchatview.cpp  personchatview.h  persondetailsdialog.cpp  persondetailsdialog.h  persondetailsplugin.desktop  persondetailsview.cpp  persondetailsview.h  personemailview.cpp  personemailview.h  personeventview.cpp  personeventview.h  personfilesview.cpp  personfilesview.h  personnoteview.cpp  personnoteview.h  personpostview.cpp  personpostview.h
src/widgets/plugins/: CMakeLists.txt  chat.cpp  chat.h  chatlistviewdelegate.cpp  chatlistviewdelegate.h  emaildetailswidget.cpp  emaildetailswidget.h  emaildetailswidgetplugin.desktop  emaillistmodel.cpp  emaillistmodel.h  emaillistviewdelegate.cpp  emaillistviewdelegate.h  emails.cpp  emails.h  emailsplugin.desktop  events.cpp  events.h  eventviewdelegate.cpp  eventviewdelegate.h  filelist.ui  files.cpp  files.h  filesviewdelegate.cpp  filesviewdelegate.h  mergecontactswidget.cpp  mergecontactswidget.h  mergecontactswidgetplugin.desktop  note.cpp  note.h  personpresentationwidget.cpp  personpresentationwidget.h  phonedetailswidget.cpp  phonedetailswidget.h  phonedetailswidgetplugin.desktop  posts.cpp  posts.h  postviewdelegate.cpp  postviewdelegate.h  recentemailswidget.cpp  recentemailswidget.h
(+123 files in other folders)
